Games/Minesweeper/Minesweeper.css
/*/   -= Minesweeper =-   \*\
\*\ Lasse Lauwerys © 2026 /*/

   /*********************\
   | Created: 23/12/2023 |
   \*********************/

html, body, button:disabled{
    margin: 0px;
    -webkit-user-select: none;
    user-select: none;
    overflow: hidden;
}

body {
    flex-direction: column;
    display: table; /* I want the content size to be minimal, we can use the table display to obtain this property, using fit-content width doesn't work yet on all browsers. */
    margin: auto;
}

button{
    height: 20px;
    width: 20px;
    font-size: 12px;
    display: flex;
    padding: 0;
    margin: 0;
    font-weight: bold;
    color: black;
    box-sizing: border-box;
    border: none;
    display: flex; /* Necessary for a bug in Chrome and other Chromium based browsers that causes the buttons to be vertically offset with the block display.*/
    text-align: center;
    align-items: center;
    justify-content: center;
}

button:disabled{
    border: 1px solid darkgray;
    border-right: none;
    border-bottom: none;
    pointer-events: none;
}

table{
    border-spacing: 0;
    kerning:auto;
}

td{
    padding: 0;
    margin: 0;
}

section, article {
    padding: 10px;
}

article {
    width: 100%;
    /* height: 100px; */
    display: flex;
    display: flex;
    justify-content: space-between;
    align-items: center;
    box-sizing: border-box;
    margin-bottom: 10px;
}

output {
    width: 100%;
    border-style: solid;
    border-width: 2px;
}

button.n0{
    color: transparent;
}

button.n1{
    color: blue;
}

button.n2{
    color: green;
}

button.n3{
    color: red;
}

button.n4{
    color: darkblue;
}

button.n5{
    color: darkred;
}

button.n6{
    color: darkcyan;
}

button.n7{
    color: black;
}

button.n8{
    color: darkgray;
}

article, section, table, button{
    border-style: solid;
    border-width: 3px;
}

button:active:not(:disabled):not(.mine), button.active, table, article, output{
    border-top-color: darkgray;
    border-left-color: darkgray;
    border-right-color: rgb(231, 231, 231);
    border-bottom-color: rgb(231, 231, 231);
}

section, button, articlen button {
    border-top-color: rgb(231, 231, 231);
    border-left-color: rgb(231, 231, 231);
    border-right-color: darkgray;
    border-bottom-color: darkgray;
}

body, section, article, button{
    background-color: lightgray;
}

.revealed{
    font-size: 16px;
}

output{
    color: red;
    border-width: 1px;
    display: flex; /*¨¨Fixes bug in Internet Explorer that causes a weird padding on top of the output content. **/
    /* text-align: center;
    vertical-align: center;
    line-height: 46px; */
    background-color: #3e0000;
    background: radial-gradient( circle at 2px 2px, #000 1px, #3e0000 2px ) 0 0 / 4px 5px;
    background: radial-gradient( circle at 2px 2px, #640000 0px, #3e0000 2px ) 0 0 / 2px 2px;
    height: 46px;
    width: 80px;
}

article > button{
    font-size: 18px;
    padding: 15px;
    box-sizing: border-box;
}

article.original > button{
    width: 28px;
    height: 28px;
    font-size: 15px;
    padding: 0;
}

article.original > output{
    width: 44px;
    height: 28px;
}

